<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="seperater">~%</string>
    
    <string name="app_name">SADIK Teacher</string>
    <string name="Settings">Settings</string>
    <string name="Attendance">Attendance</string>
    <string name="Grade">Grade</string>
    <string name="Grade_Setting">Grade Settings</string>
    <string name="Reports">Reports</string>
    <string name="Address">Address</string>
    <string name="Zip_Code">Zip Code</string>
<string name="Classroom_Management">Classroom Management</string>
    
<string name="Standard">Standard</string>
<string name="Section">Section</string>
<string name="Attendance_Type">Attendance Type</string>
<string name="Class">Class</string>
<string name="School">School</string>
<string name="School_Name">School Name</string>
<string name="School_ID">School ID</string>
<string name="Add_More_Schools">Add More Schools</string>
<string name="School_Effective_Day">School Effective Day</string>
<string name="Configure_School">Configure School</string>
<string name="Configure_Class">Configure Class</string>
<string name="Schools">Schools</string>
<string name="Student">Student</string>
<string name="Assignment">Assignment</string>
<string name="Assignment_Detail">Assignment Detail</string>
<string name="Select_Assegnment">Select Assegnment</string>
<string name="Select">Select</string>
<string name="Select_Year">Select Year</string>
<string name="Select_Class">Select Class</string>
<string name="Select_School">Select School</string>
<string name="Select_Student">Select Student</string>
<string name="Select_Team">Select Team</string>
<string name="Select_Colour">Select Colour</string>
<string name="Add">Add</string>
<string name="Search">Search</string>
<string name="Done">Done</string>
<string name="Name">Name</string>
<string name="Age">Age</string>
<string name="Max_Marks">Max Marks</string>
<string name="Grade_Allocation">Grade Allocation</string>
<string name="Grade_Reports">Grade Reports</string>
<string name="Attendance_Reports">Attendance Reports</string>
<string name="Report">Report</string>
<string name="From_Date">From Date</string>
<string name="To_Date">To Date</string>
<string name="Show_Result">Show Result</string>
<string name="Setting">Settings</string>
<string name="Provience">Provience</string>
<string name="Regency_City">Regency/City</string>
<string name="District">District</string>
<string name="Sub_District_Village">Sub District/Village</string>
<string name="More">More</string>
<string name="Remove">Remove</string>
<string name="Adviser_Name">Adviser Name</string>
<string name="Capacity">Capacity</string>
<string name="Layout">Layout</string>
<string name="Row">Row</string>
<string name="Column">Column</string>
<string name="Proceed">Proceed</string>
<string name="Profile">Profile</string>
<string name="Calendar">Calendar</string>
<string name="Calendar_Settings">Calendar Settings</string>
<string name="Grades">Grades</string>
<string name="Seat_Allocation">Seat Allocation</string>
<string name="Year">Year</string>
<string name="Term">Term</string>
<string name="Start_Date">Start Date</string>
<string name="End_Date">End Date</string>
<string name="Holiday_Settings">Holiday Settings</string>
<string name="Holiday_List">Holiday List</string>
<string name="Holiday">Holiday</string>
<string name="Holidays">Holidays</string>
<string name="Add_Holiday">Add Holiday</string>
<string name="Add_Event">Add Event</string>
<string name="Event_Name">Event Name</string>
<string name="Event_List">Event List</string>
<string name="Event">Event</string>
<string name="Effective_Days">Effective Days</string>
<string name="Event_Settings">Event Settings</string>
<string name="Period_Settings">Period Settings</string>
<string name="Period">Period</string>
<string name="Period_Count">Period Count</string>
<string name="Configure_Period">Configure Period</string>
<string name="Configure">Configure</string>
<string name="Schedule">Schedule</string>
<string name="Subject">Subject</string>
<string name="Recurrence">Recurrence</string>
<string name="Select_Recurrence">Select Recurrence</string>
<string name="Exam_Type">Exam Type</string>
<string name="Exam_ID">Exam ID</string>
<string name="Grade_Categories">Grade Categories</string>
<string name="Date">Date</string>
<string name="Min_Points_KKM">Min Points KKM</string>
<string name="Add_Type">Add Type</string>
<string name="Grade_Max_Mark">Grade Max. Mark</string>
<string name="Weightage">Weightage</string>
<string name="Guardian_Details">Guardian Details</string>
<string name="Student_Details">Student Details</string>
<string name="Add_Student">Add Student</string>
<string name="View_Class_Layout">View Class Layout</string>
<string name="Randon_Allocation">Randon Allocation</string>
<string name="Teacher_Profile">Teacher Profile</string>
<string name="First_Name">First Name</string>
<string name="Last_Name">Last Name</string>
<string name="DOB">DOB</string>
<string name="Date_of_Birth">Date of Birth</string>
<string name="Mobile">Mobile</string>
<string name="Email_Address">Email Address</string>
<string name="Male">Male</string>
<string name="Female">Female</string>
<string name="Student_Id">Student Id</string>
<string name="Religion">Religion</string>
<string name="City">City</string>
<string name="Upload_Photo">Upload Photo</string>
<string name="Father_Name">Father\'s Name</string>
<string name="Mother_Name">Mother\'s Name</string>
<string name="attdot_type">Att. Type</string>
<string name="colors">Colors</string>
<string name="Teacher_Id">Teacher Id</string>
<string name="date_of_joining">Date of Joining</string>
<string name="Grade_Type">Grade Type</string>
<string name="Category">Category</string>
<string name="Grade_Category">Grade Category</string>
<string name="Grade_Type_U"><u>Grade Type</u></string>
<string name="Update">Update</string>
<string name="Under_Development">Under Development</string>
<string name="Welcome_to_Sadik_Mobile_Teacher_application">Welcome to Sadik Mobile Teacher application</string>
<string name="pstart_time">Start Time</string>
<string name="pend_time">End Time</string>
    
<string name="Data_Successfully_Saved">Data Successfully Saved</string>
<string name="FORM_CONTAINS_ERROR">Form Contains Error</string>
<string name="Do_you_really_want_to_remove_the_item">Do you really want to remove the item ?</string>
<string name="End_Date_should_be_more_than_the_Start_Date">End Date should be more than the Start Date</string>
 <string name="to">to</string>
    <string name="equal">=</string>
    <string name="plus_b"><b>+</b></string>
    <string name="minus_b"><b>-</b></string>
    <string name="Point">Point</string>
    <string name="Score">Score</string>
    <string name="Letter">Letter</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
</resources>