<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:weightSum="1.0"
    android:orientation="horizontal"
    android:paddingTop="@dimen/dp_6"
    >
    <TextView
        android:id="@+id/txt_subPeriod_Count"
        android:text="@string/Period"
        android:layout_weight=".3"
        android:layout_width="0dp" 
        android:layout_height="wrap_content"
        style="@style/styleText_singleline_black_14"
        />
    <TextView
        android:id="@+id/txt_subPeriod_startTime"
        android:layout_weight=".35"
        android:layout_width="0dp" 
        android:layout_height="@dimen/view_height"
        style="@style/styleEditText"
        android:layout_marginRight="@dimen/dp_4"
       android:hint="@string/pstart_time" />
        <TextView
        android:id="@+id/txt_subPeriod_endTime"
        android:layout_weight=".35"
        android:layout_width="0dp" 
        android:layout_height="@dimen/view_height"
        style="@style/styleEditText"
        android:layout_marginLeft="@dimen/dp_4"
        android:hint="@string/pend_time"
        />
    </LinearLayout>