<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:weightSum="1.0"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/dp_6"
    >
   <Spinner
        android:id="@+id/spin_ConfSchool_Standard"
        android:layout_weight=".35"
        android:layout_width="0dp" 
        android:layout_height="@dimen/view_height"
        android:prompt="@string/Standard"
                style="@style/styleSpinner"
        android:entries="@array/class_standard"
	android:spinnerMode="dropdown"
                android:layout_marginRight="@dimen/dp_4"
        />
    <Spinner
        android:id="@+id/spin_ConfSchool_Section"
        android:layout_weight=".42"
        android:layout_width="0dp" 
        android:layout_height="@dimen/view_height"
        android:prompt="@string/Section"
        android:entries="@array/section_list"
	android:spinnerMode="dropdown"
                style="@style/styleSpinner"
                android:layout_marginRight="@dimen/dp_4"
                />
    <Button
        android:id="@+id/btn_ConfSchool_More_Remove"
        android:textColor="@android:color/white"
        android:layout_weight=".23"
        android:layout_width="0dp" 
        android:layout_height="wrap_content"
        android:text="@string/Remove"
        android:background="@drawable/round_red_bg"
	android:paddingTop="@dimen/dp_4"
	android:paddingBottom="@dimen/dp_4"
	android:textSize="@dimen/sp_13"
/>
    </LinearLayout>